# hybrid-vid

./: .gitignore  AGENTS.md  README.md
documentation/: ai_agent_instructions.md  architecture.md  design.md  plan.md  prd.md  sources.md  status.md
documentation/sources/video-publishing/: Claude.md
documentation/sources/yt-rs/: Claude.md
scripts/: build-all.sh  build-cli.sh  build-processing.sh  build-web.sh
workspaces/adapters/: Cargo.toml
workspaces/adapters/adapter-video-publishing/: Cargo.toml
workspaces/adapters/adapter-video-publishing/src/: lib.rs
workspaces/adapters/adapter-yt-rs/: Cargo.toml
workspaces/adapters/adapter-yt-rs/src/: lib.rs
workspaces/cli-tools/: Cargo.toml
workspaces/cli-tools/hv-audio-cli/: Cargo.toml
workspaces/cli-tools/hv-audio-cli/src/: main.rs
workspaces/cli-tools/hv-video-cli/: Cargo.toml
workspaces/cli-tools/hv-video-cli/src/: main.rs
workspaces/processing/: Cargo.toml
workspaces/processing/processing-audio/: Cargo.toml
workspaces/processing/processing-audio/src/: lib.rs
workspaces/processing/processing-core/: Cargo.toml
workspaces/processing/processing-core/src/: engine.rs  lib.rs  model.rs
workspaces/processing/processing-video/: Cargo.toml
workspaces/processing/processing-video/src/: lib.rs
workspaces/web-ui/: Cargo.toml
workspaces/web-ui/hv-web-app/: Cargo.toml  index.html
workspaces/web-ui/hv-web-app/src/: main.rs
workspaces/web-ui/hv-web-core/: Cargo.toml
workspaces/web-ui/hv-web-core/src/: lib.rs
